--- a/src/Container.css
+++ b/src/Container.css
@@ -1,4 +1,4 @@
-.App {
+.Container {
   text-align: center;
 }
 
@@ -8,12 +8,12 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .Container-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.Container-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,11 +24,11 @@
   color: white;
 }
 
-.App-link {
+.Container-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes Container-logo-spin {
   from {
     transform: rotate(0deg);
   }
